# my_recipes

./: .gitignore  AGENTS.md  LICENSE-RECIPES.md  LICENSE-TOOLS.md  README.md  birria.tex  book.html  breakfast_burritos1.tex  breakfast_burritos2.tex  cheesy-bacon-hashbrown-casserole.tex  cilantro_rice.tex  hungarian_mushroom_soup.tex  kettle corn.tex  pot_roast_recipe.tex  recipe_template-v2-multisection.tex  recipe_template-v2.tex  recipe_template.tex  requirements.txt  rice_crispies_treats.tex  tuscan zuppa(dots).tex  tuscan zuppa(table).tex  tuscan zuppa.tex  updated_cherry_canning_recipe.tex
- basics/: basic-chicken-thighs-ip.tex  basic-rice-ricemaker.tex
01 basics/: basic-chicken-thighs-ip.tex  basic-rice-ricemaker.tex
02 appetizers/: deviled_eggs.tex
03 soups/: italian_sausage_soup.tex  lamb-chickpea-stew.tex  pork-chickpea-stew.tex  tuscan zuppa.tex
04 sides/: cilantro_rice.tex  dads-brussels-sprouts.tex  fried_rice.tex  green_bean_casserole.tex  quick-baked-beans.tex  roasted-cauliflower.tex  roasted_asparagus.tex  scalloped-potatoes-gruyere.tex  suddenly-salad-classic-clone.tex  sweet_and_sour_steamed_cabbage.tex
05 entrees/: baby-back-ribs.tex  braised beef.tex  (+17 more)
_tools/: README.md  book.example.yml  book.tex.jinja  book.yml  build.py  compile.py  compile_recipes.py  cookbook_indexer.py  culinary_data_manager.py  dev-spec.md  extract.py  helpers.py  html_export.py  indexer.py  indexer_old.py  preprocess.py  pyproject.toml  requirements.txt  scan.py
_tools/templates/web/: book.html.jinja
_tools/test/: conftest.py  test_conf.py  test_scan.py
(+118 files in other folders)
